[gd_scene load_steps=3 format=3 uid="uid://cgvwrtpkglvro"]

[ext_resource type="Script" uid="uid://dhb7dvaube7qt" path="res://tools/platforming_tool.gd" id="1_i0wej"]
[ext_resource type="PackedScene" uid="uid://ckephimkda3cb" path="res://components/gravity.tscn" id="2_gkttt"]

[node name="PlatformingTool" type="CharacterBody2D"]
script = ExtResource("1_i0wej")

[node name="Gravity" parent="." instance=ExtResource("2_gkttt")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true

[node name="ExecutionTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="PointInterval" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="PointInterval" to="." method="_on_point_interval_timeout"]
